--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,17 +1,12 @@
-# This is a basic workflow to help you get started with Actions
+
 
 name: CI
 
 # Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+
+ 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -26,14 +21,14 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: 
+      - name: running tests
+        run:|
         mkdir lib
         mkdir bin
         curl https://repo1.maven.org/maven2/org/junit/platform/junit-platform-console-standalone/1.11.4/junit-platform-console-standalone-1.11.4.jar -o lib/junit-platform-console-standalone-1.11.4.jar 
         javac -d bin/ src/Calculator.java 
         javac -d bin -cp bin:lib/junit-platform-console-standalone-1.11.4.jar test/* 
         java -jar lib/junit-platform-console-standalone-1.11.4.jar -class-path bin --scan-class-path 
-        git push origin main
+    \
 
         
